[tool.poetry]
name = "linguee-api"
version = "2.4.0"
description = "Linguee API"
readme = "README.md"
homepage = "https://github.com/imankulov/linguee-api"
repository = "https://github.com/imankulov/linguee-api"
authors = ["Roman Imankulov <roman.imankulov@gmail.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
include = [
    "CHANGELOG.md",
    "docs/linguee-api.png",
]

packages = [
    { include = "linguee_api" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
pydantic = "^1.8.1"
xextract = "^0.1.8"
httpx = {version = "1.0.0b0", allow-prereleases = true}
uvicorn = "^0.13.4"
sentry-sdk = "^1.0.0"
python-dotenv = "^0.17.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-xdist = "^2.2.1"
black = "^20.8b1"
flake8 = "^3.8.4"
coverage = "^5.4"
import-linter = "^1.2.1"
pytest-asyncio = "^0.14.0"
ipython = "^7.22.0"
click = "^7.1.2"
asgiref = "^3.3.4"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.4"}

[tool.coverage.run]
source = ["tests", "linguee_api"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

